[gd_scene load_steps=3 format=3 uid="uid://b7nwkaudy8b08"]

[ext_resource type="Script" path="res://Scenes/typeing_test.gd" id="1_6w4ww"]
[ext_resource type="FontFile" uid="uid://crkwqcajq021m" path="res://Assets/Kenney Blocks.ttf" id="3_yqw7p"]

[node name="TypeingTest" type="Node2D"]
script = ExtResource("1_6w4ww")

[node name="StaminaRegenTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(2, 2)

[node name="TestText" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 2.15
anchor_top = -0.875
anchor_right = 2.15
anchor_bottom = -0.875
offset_left = 74.0
offset_top = 70.0
offset_right = 234.0
offset_bottom = 96.0
theme_override_colors/default_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/normal_font = ExtResource("3_yqw7p")
text = "LOREM IPSUM DOLOR SIT AMET"
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="StaminaTextLabel" type="RichTextLabel" parent="Control"]
offset_left = 3.0
offset_right = 53.0
offset_bottom = 13.0
theme_override_colors/default_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/normal_font = ExtResource("3_yqw7p")
theme_override_font_sizes/normal_font_size = 8
text = "Stamina :"
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="StaminaValueLabel" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
offset_left = 56.0
offset_right = 85.0
offset_bottom = 13.0
theme_override_colors/default_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/normal_font = ExtResource("3_yqw7p")
theme_override_font_sizes/normal_font_size = 8
text = "4"
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="WPMTextLabel" type="RichTextLabel" parent="Control"]
offset_left = 3.0
offset_top = 10.0
offset_right = 53.0
offset_bottom = 23.0
theme_override_colors/default_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/normal_font = ExtResource("3_yqw7p")
theme_override_font_sizes/normal_font_size = 8
text = "WPM :"
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="WPMValueLabel" type="RichTextLabel" parent="Control"]
unique_name_in_owner = true
offset_left = 34.0
offset_top = 10.0
offset_right = 63.0
offset_bottom = 23.0
theme_override_colors/default_color = Color(0.941176, 0.964706, 0.941176, 1)
theme_override_fonts/normal_font = ExtResource("3_yqw7p")
theme_override_font_sizes/normal_font_size = 8
text = "10"
scroll_active = false
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[connection signal="timeout" from="StaminaRegenTimer" to="." method="_on_stamina_regen_timer_timeout"]
